WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44041
ProcessLauncher's WorkQueue's name is too long on Windows
https://bugs.webkit.org/show_bug.cgi?id=44041
Summary
ProcessLauncher's WorkQueue's name is too long on Windows
Jon Honeycutt
Reported
2010-08-15 17:53:56 PDT
The WorkQueue used by ProcessLauncher has the name "com.apple.WebKit.ProcessLauncher". This results in stderr output when running layout tests: ERROR: Thread name "com.apple.WebKit.ProcessLauncher" is longer than 31 characters and will be truncated by Visual Studio (..\..\wtf\Threading.cpp:74 WTF::createThread)
Attachments
Shortening ProcessLauncher thread name.
(1.73 KB, patch)
2012-07-06 05:34 PDT
,
Dominik Röttsches (drott)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dominik Röttsches (drott)
Comment 1
2012-07-06 05:34:46 PDT
Created
attachment 151064
[details]
Shortening ProcessLauncher thread name.
Andreas Kling
Comment 2
2012-07-06 05:36:52 PDT
Comment on
attachment 151064
[details]
Shortening ProcessLauncher thread name. This seems like a reasonable thing to do. rs=me
WebKit Review Bot
Comment 3
2012-07-06 07:50:08 PDT
Comment on
attachment 151064
[details]
Shortening ProcessLauncher thread name. Clearing flags on attachment: 151064 Committed
r121972
: <
http://trac.webkit.org/changeset/121972
>
WebKit Review Bot
Comment 4
2012-07-06 07:50:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug