ProcessLauncher's WorkQueue's name is too long on Windows https://bugs.webkit.org/show_bug.cgi?id=44041

Patch by Dominik Röttsches <dominik.rottsches@intel.com> on 2012-07-06
Reviewed by Andreas Kling.

Shorten thread name for process launcher so that we can silence the warning
for thread names getting truncated under VisualStudio -
see createThread() in  Threading.cpp.

* UIProcess/Launcher/ProcessLauncher.cpp:
(WebKit::processLauncherWorkQueue):

Canonical link: https://commits.webkit.org/108530@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121972 268f45cc-cd09-0410-ab3c-d52691b4dbfc